ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression16_es6/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression16_es6/input.ts:4:11
  |
4 |     yield foo;
  |           ^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression16_es6/input.ts:4:5
  |
4 |     yield foo;
  |     ^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression16_es6/input.ts:4:5
  |
4 |     yield foo;
  |     ^^^^^

